# odoo-connector

./: .gitignore  README.md
desktop-extension/: README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.3.md  build.sh  manifest.json  odoo-connector.mcpb  package.json
python/: .env.example  README.md  pyproject.toml
python/src/odoo_connector/: __init__.py  odoo_client.py  server.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: index.ts  odoo-client.ts  proxy.ts
