[project]
name = "odoo-connector"
version = "0.1.0"
description = "Claude/MCP connector for Odoo (Python)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
odoo-connector = "odoo_connector.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_connector"]
